power: Fix incorrect backlight level on restore

https://bugzilla.gnome.org/show_bug.cgi?id=691964#c14